crates/python_parser/tests/snapshots/invalid_syntax@node_range_with_gaps.py.snap
---
source: crates/python_parser/tests/fixtures.rs
input_file: crates/python_parser/resources/inline/err/node_range_with_gaps.py
---
## AST

```
Module(
    ModModule {
        range: 0..41,
        body: [
            FunctionDef(
                FunctionDefStmt {
                    range: 0..7,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("foo"),
                        range: 4..7,
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 7..7,
                        posonlyargs: [],
                        args: [],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: None,
                    },
                    returns: None,
                    body: [],
                },
            ),
            FunctionDef(
                FunctionDefStmt {
                    range: 18..32,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("bar"),
                        range: 22..25,
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 25..27,
                        posonlyargs: [],
                        args: [],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: None,
                    },
                    returns: None,
                    body: [
                        Expr(
                            ExprStmt {
                                range: 29..32,
                                value: EllipsisLiteral(
                                    EllipsisLiteralExpr {
                                        range: 29..32,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
            FunctionDef(
                FunctionDefStmt {
                    range: 33..40,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("baz"),
                        range: 37..40,
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 40..40,
                        posonlyargs: [],
                        args: [],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: None,
                    },
                    returns: None,
                    body: [],
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | def foo # comment
  |                  ^ Syntax Error: Expected '(', found newline
2 | def bar(): ...
3 | def baz
  |


  |
1 | def foo # comment
2 | def bar(): ...
  | ^^^ Syntax Error: Expected ')', found 'def'
3 | def baz
  |


  |
1 | def foo # comment
2 | def bar(): ...
3 | def baz
  |        ^ Syntax Error: Expected '(', found newline
  |


  |
2 | def bar(): ...
3 | def baz
  |
